<resources>
    <string name="app_name">Smart Gym</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="urlsmart">www.smartgym.infornet.mx</string>
    <string name="inicio">Inicio</string>
    <string name="rutinas">Rutinas</string>
    <string name="alimentacion">Alimentación</string>
    <string name="planesalimentacion">Planes de alimentación</string>
    <string name="progreso">Progreso</string>
    <string name="perfil">Perfil</string>
    <string name="editarperfil">Editar perfil</string>
    <string name="salir">Cerrar sesión</string>
    <string name="reportar">Reportar un problema</string>
    <string name="usuario">Usuario</string>
    <string name="gym">Gimnasio</string>
    <string name="status">Status</string>
    <string name="hasta">Expira el</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="fechanacimiento">Fecha de Nacimiento</string>
    <string name="telefono">Teléfono</string>
    <string name="telefonoemer">Teléfono de emergencia</string>
    <string name="condicion">Condición física</string>
    <string name="valor">Valor</string>
    <string name="restablecerpass">Restablecer contraseña</string>
    <string name="ingresarpass">Registrar constraseña</string>
    <string name="creador">Creado por Infornet</string>
    <string name="login_title">Iniciar sesión</string>
    <string name="login_btn">Entrar</string>
    <string name="loading_login">Iniciando sesión ...</string>
    <string name="correo">Correo</string>
    <string name="password">Contraseña</string>
    <string name="confpassword">Confirmar contraseña</string>
    <string name="nuevacontra">Nueva contraseña</string>
    <string name="currentpass">Contraseña actual</string>
    <string name="msgForget">He olvidado mi contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="mensajeRestablecer">Ingresa tu email</string>
    <string name="aplicarcambios">Aplicar cambios</string>
    <string name="misrutinas">Mis rutinas</string>
    <string name="todasrutinas">Rutinas del gimnasio</string>
    <string name="erroralimentacion">No tienes planes de alimentacion. Acercate con tu entrenador</string>
    <string name="errorrutinas">No hay rutinas agregadas</string>
    <string name="errorrutinasgym">El gimnasio no tiene rutinas agregadas, acercate con tu entrenador</string>
    <string name="titlulo_pickers">Obtener fecha y hora</string>
    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agregar_a_mis_rutinas">Agregar a mis rutinas</string>
    <string name="error">Error</string>
    <string name="nombre_rutinas">Rutina</string>
    <string name="agregar_rutinas">Agregar rutinas</string>
    <string name="editar">Editar</string>
    <string name="eliminar_de_mis_rutinas">Eliminar de mis rutinas</string>
    <string name="back">back</string>
    <string name="mensaje">Mensaje</string>
    <string name="frase">Frase</string>
    <string name="autor_de_la_frase">Autor de la frase</string>
    <string name="desc_progreso">Selecciona bajo que esquema quieres trabajar tu progreso</string>
    <string name="peso">Bajar de peso</string>
    <string name="masa_muscular">Generar masa muscular</string>
    <string name="fuerza">Aumentar fuerza</string>
    <string name="pedir_datos_bajarpeso">Introduce los siguientes datos para iniciar tu progreso</string>
    <string name="introduce_tu_peso_inicial">Introduce tu peso inicial</string>
    <string name="introduce_tu_estatura">Introduce tu estatura</string>
    <string name="cuanto_peso_quieres_perder">Pon una meta de peso a perder</string>
    <string name="tiempo_progreso">En cuanto tiempo quieres medir tu progreso (Max. 3 meses)</string>
    <string name="guardar_datos">Guardar datos</string>
    <string name="kg">Kg</string>
    <string name="mts">Mts</string>
    <string name="meses">Meses</string>
    <string name="titulo_perder_peso">Listo! Sea han registrado tus datos</string>
    <string name="peso_a_perder">Peso a perder</string>
    <string name="fecha_inicial">Fecha inicial</string>
    <string name="fecha_final">Fecha final</string>
    <string name="objetivo_por_semana">Objetivo por semana</string>
    <string name="info1_avance_perder_peso">Avance</string>
    <string name="info2_avance_perder_peso">Por favor introduce cuál es tu peso al día de hoy para seguir calculando tu progreso.</string>
    <string name="ok">Ok</string>
    <string name="pedir_datos_masamusc">Introduce tu primer registro para que posteriormente calculemos tu progreso</string>
    <string name="introduce_peso_levantado">Introduce el peso levantado</string>
    <string name="introduce_numero_repeticiones">Introduce el número de repeticiones</string>
    <string name="repeticiones">Repeticiones</string>
    <string name="musculo">Músculo</string>
    <string name="fuerza_del_primer_registro">Fuerza del primer registro</string>
    <string name="info1_avance_fuerza">Registra tu avances en esta pantalla, puedes agregar los registros que gustes antes de la fecha limite</string>
    <string name="info2_avance_fuerza">Puedes acceder en el botón de abajo, para consultar tus avances</string>
    <string name="numero_pagina">1</string>
    <string name="info1_progreso_fuerza">En esta sección puedes ver el progreso que has tenido, a través de la gráfica</string>
    <string name="cancelar">Cancelar</string>
    <string name="enviado">Enviado !</string>
    <string name="faltan">Faltan</string>
    <string name="pagina_anterior"><![CDATA[< Anterior]]></string>
    <string name="pagina_siguiente"><![CDATA[Siguiente >]]></string>
    <string name="ultima_pagina"><![CDATA[>>]]></string>
    <string name="primer_pagina"><![CDATA[<<]]></string>
    <string name="aviso">Aviso !</string>
    <string name="mensaje_info_nodata">Lo sentimos, no podemos mostrar tu progreso hasta que hayas ingresado mas datos</string>
    <string name="atencion">Atención !</string>
    <string name="objetivo">Objetivo</string>
    <string name="info1_new_obj">Terminó el tiempo que estableciste para tu objetivo, selecciona la accion con la que quisieras continuar</string>
    <string name="info2_new_obj">Selecciona que objetivo quieres iniciar</string>
    <string name="reiniciar_mi_objetivo">Reiniciar mi objetivo</string>
    <string name="iniciar_un_nuevo_objetivo">Iniciar un nuevo objetivo</string>
    <string name="ninguno">Ninguno</string>
    <string name="grafica_peso_perdido">Grafica de peso perdido</string>
    <string name="grafica_imc">Grafica del IMC</string>
    <string name="aumentar_fuerza">Incrementar Fuerza</string>
    <string name="cargando">Cargando ...</string>
</resources>
