<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="400dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView28"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorSecundary"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:text="Selecciona un objetivo"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/info2_new_obj"
                android:textColor="@color/colorSecundary"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rg2_rbobjs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <RadioButton
                    android:id="@+id/rb2_peso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/peso" />

                <RadioButton
                    android:id="@+id/rb2_masa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/masa_muscular" />

                <RadioButton
                    android:id="@+id/rb2_fuerza"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fuerza" />
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_new_objetivo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pagina_siguiente" />

        </LinearLayout>
    </ScrollView>



</LinearLayout>