<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="400dp">

    <TextView
        android:id="@+id/textView28"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorSecundary"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:text="Ha terminado el tiempo"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/info1_new_obj"
                android:textColor="@color/colorSecundary"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rg1_rbobjs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <RadioButton
                    android:id="@+id/rb1_reiniciar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reiniciar_mi_objetivo" />

                <RadioButton
                    android:id="@+id/rb1_nuevo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/iniciar_un_nuevo_objetivo" />

                <RadioButton
                    android:id="@+id/rb1_ninguno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ninguno" />
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_new_objetivo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pagina_siguiente" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>