<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ListaRutinasActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@mipmap/fondorutinas"
        app:elevation="10dp">


        <ImageView
            android:id="@+id/btn_back_lista_rutinas"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            app:srcCompat="@mipmap/arrow_back_white" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/todasrutinas"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_error_lista_rutinas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/error"
            android:textColor="@color/design_default_color_error"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/prog_bar_lista_rutinas"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/paginacion_layout"
                android:layout_marginBottom="16dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/primero_lista_rutinas"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/primer_pagina"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/anterior_lista_rutinas"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/pagina_anterior"
                    android:textSize="12sp" />


                <TextView
                    android:id="@+id/tv_current_pag_lista_rutinas"
                    android:layout_width="2dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/numero_pagina"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/siguiente_lista_rutinas"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/pagina_siguiente"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/ultimo_lista_rutinas"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ultima_pagina"
                    android:textSize="12sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_lista_rutinas"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>



    </RelativeLayout>

</LinearLayout>