<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".PreFuerzaActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">


    <ScrollView
        android:layout_width="350dp"
        android:layout_height="550dp"
        android:layout_centerInParent="true"
        android:background="@color/colorAccent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aumentar_fuerza"
                android:textSize="25sp"
                android:textAllCaps="true"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                android:textColor="@color/colorSecundary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/tiempo_masa"
                android:text="@string/tiempo_progreso" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiempo_masa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="123"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meses"
                    android:textSize="24sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/pedir_datos_masamusc"
                android:textColor="@color/colorSecundary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/peso_ini_levantado"
                android:text="@string/musculo" />

            <Spinner
                android:id="@+id/sp_musculos"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:entries="@array/musculos" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/peso_ini_levantado"
                android:text="@string/introduce_peso_levantado" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/peso_ini_levantado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:maxLength="6" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kg"
                    android:textSize="24sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/repeticiones_ini"
                android:text="@string/introduce_numero_repeticiones" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/repeticiones_ini"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:digits="1234567890"
                        android:maxLength="3" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repeticiones"
                    android:textSize="24sp" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save_fuerza_init"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/guardar_datos" />

            <ProgressBar
                android:id="@+id/prog_bar_fuerza_init"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="-12dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorSecundary" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>