<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingTop="20dp"
    android:paddingRight="40dp"
    tools:context=".ForgetPasswordActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="144dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@mipmap/icon" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:text="@string/restablecerpass"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/mensajeRestablecer"
                android:textColor="#FFF"
                android:textSize="16sp" />



            <com.google.android.material.textfield.TextInputLayout
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo"
                app:hintAnimationEnabled="false"
                android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_forget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@mipmap/emailwhite"
                    android:drawablePadding="15dp"
                    android:inputType="textEmailAddress"
                    android:textColor="#FFF" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_forget_pass"
                style="@style/AppTheme.Button"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:text="@string/enviar"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:backgroundTint="@color/colorPrimary"
                app:cornerRadius="10dp" />

            <ProgressBar
                android:id="@+id/prog_bar_forget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorPrimary"
                android:max="100"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>